[project]
name = "language-dimension"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "scipy>=1.15.3",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.2",
]
